<resources>
    <string name="mpopp_s_fuel_app">mpopp\'s Fuel App</string>
    <string name="version">Version 0.3.2</string>
    <string name="app_name">Fuel</string>
    <string name="kilometers">Kilometers</string>
    <string name="fuel_amount_in_liters">Fuel amount in liters</string>
    <string name="price_per_liter_in_eur">Price per liter in €</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="km">km</string>
    <string name="liters">Liters</string>
    <string name="euro_per_l">€/l</string>
    <string name="price">Price</string>
    <string name="cons">Cons.</string>
</resources>